force-app/main/default/objects/Lead_Line_Item__c/Lead_Line_Item__c.object-meta.xml
<CustomObject>
    <label>LeadLineItem</label>
    <nameField>
        <label>Lead Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LeadLineItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>