force-app/main/default/objects/Lead_Line_Item__c/fields/Downsell__c.field-meta.xml
<CustomField>
    <fullName>Downsell__c</fullName>
    <label>Downsell</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>