force-app/main/default/objects/Lead_Line_Item__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>