force-app/main/default/objects/Lead_Line_Item__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>LeadProducts</relationshipLabel>
    <relationshipName>LeadLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>