force-app/main/default/objects/Lead_Line_Item__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>LeadLineItems</relationshipLabel>
    <relationshipName>LeadLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>