force-app/main/default/objects/Lead_Line_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>LeadProducts</relationshipLabel>
    <relationshipName>LeadLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>