force-app/main/default/objects/Lead_Line_Item__c/fields/Upsell__c.field-meta.xml
<CustomField>
    <fullName>Upsell__c</fullName>
    <label>Upsell</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>